--- a/index.html
+++ b/index.html
@@ -9,25 +9,23 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>ACSICS: 1st International Workshop on Autonomic Computing for Secure Industrial Control Systems and Industrial-IoT (A Workshop Proposal for IEEE Cybersecurity and Resilience (CSR)'24)</title>
+    <title>SICSI: 1st International Workshop on Secure Industrial Control Systems and Industrial-IoT (Co-organized with IEEE Conference on Communications and Network Security)</title>
 </head>
 
 <body>
 
     <div id="top" class="banner">
-        <img src="assets/london.jpeg" alt="ACSICS'24 Workshop Banner" style="width: 100%">
+        <img src="assets/avignon2.webp" alt="SICSI'25 Workshop Banner" style="width: 100%">
         <div class="top-left">
-            <!--span class="title1">ACSICS</span><span class="title2"> Workshop</span> <span class="year">2024</span-->
-            <span class="title1">1<sup>st</sup> International Workshop on </span> <br>
-            <span class="title2">Autonomic Computing for</span> <br> 
+            <span class="title1">1<sup>st</sup> International Workshop on</span> <br>
             <span class="title2">Secure Industrial Control</span> <br>
             <span class="title2">Systems and Industrial-IoT</span> <br>
-            <span class="year">2024</span> <br>
+            <span class="year">2025</span> <br>
 
         </div>
         <div class="bottom-right">
-            co-located with <a target="_blank" href="https://www.ieee-csr.org/">IEEE CSR'24</a> <br>
-            September 2-4, London, UK (Hybrid)
+            co-located with <a target="_blank" href="https://cns2025.ieee-cns.org/">IEEE CNS'25</a> <br>
+            September 8-11, Avignon, France.
         </div>
     </div>
 
@@ -50,17 +48,6 @@
             </td>
         </tr>
     </table>
-
-    <!--h2>Workshop Proposal for CSR'24:</h2-->
-    <!--h2>1<sup>st</sup> International Workshop on Autonomic Computing for Secure Industrial Control Systems and Industrial-IoT (ACSICS'24)</h2>
-    <p>
-        ACSICS'24 will be organized in coordination with IEEE Cybersecurity and Resilience (CSR)'24 main conference. 
-        We believe this workshop's specific technical focus on security of industrial control systems, 
-        operational technology, scada networks and industrial IoT, utilizing autonomic computing, 
-        autonomous systems and artificial intelligence is well-aligned with the main theme of 
-        the CSR'24 conference. Organizing committee has been researching and actively publishing 
-        on Cybersecurity, Autonomic Computing and ICS Security fields.
-    </p><br>
 
     <h2 id="intro">Introduction</h2-->
     <h2 id="CFP">Call For Papers</h2>
@@ -96,16 +83,16 @@
 
     <h4>Guidelines</h4>
 
-    <p>Papers should be formatted according to the <a target="_blank" href="https://www.ieee-csr.org/instructions/">IEEE CSR formatting guidelines</a>.</p>
+    <p>Papers should be formatted according to the <a target="_blank" href="https://cns2025.ieee-cns.org/workshop/submission-instructions">IEEE CSN'25 formatting guidelines</a>.</p>
 
     <h4 id="Dates">Important Dates</h4>
     <p>Be mindful of the following dates:</p>
     <ul>
-    <li><strong>Workshop Paper Submission Deadline</s></strong>: <b>June 3rd</b></li>
-    <li><strong>Notification of Paper Acceptance</strong>: <b>July 3rd</b></li>
-    <li><strong>Camera-ready Papers Due</strong>: <b>July 14</b></li>
-    <li><strong>Early Registration Deadline</strong>: <b>July 20</b></li>
-    <li><strong>Workshop Date</strong>: <b>September 2-4</b></li>
+    <li><strong>Workshop Paper Submission Deadline</s></strong>: <b>June 30</b></li>
+    <li><strong>Notification of Paper Acceptance</strong>: <b>July 15</b></li>
+    <li><strong>Camera-ready Papers Due</strong>: <b>August 5</b></li>
+    <!--li><strong>Early Registration Deadline</strong>: <b>July 20</b></li-->
+    <li><strong>Workshop Date</strong>: <b>September 11</b></li>
     </ul> 
     <p><em><u>Note</u></em>: all deadlines are AoE (Anywhere on Earth).</p>
 
@@ -175,7 +162,7 @@
     <footer>
         &copy; <a href="#organizingCommittee">Workshop Organizers</a>
         &nbsp;|&nbsp; Sponsored by <a target="_blank" href="https://www.ieee-csr.org/">IEEE CSR 2024</a>
-        &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
+        &nbsp;|&nbsp; Design by <a href="https://github.com/aliteke">A.T.</a>
     </footer>
 
 </body>
