updated registration, flyer, directions and program pages.

--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
 
     <footer>
         &copy; <a href="#organizingCommittee">Workshop Organizers</a>
-        &nbsp;|&nbsp; Sponsored by <a target="_blank" href="https://www.ieee-csr.org/">IEEE CSR 2024</a>
-        &nbsp;|&nbsp; Design by <a href="https://github.com/aliteke">A.T.</a>
+        &nbsp;|&nbsp; Sponsored by <a target="_blank" href="https://cns2025.ieee-cns.org/">IEEE CNS 2025</a>
+        &nbsp;|&nbsp; Design by <a href="https://aliteke.github.io">A.T.</a>
     </footer>
 
 </body>
