--- a/directions/index.html
+++ b/directions/index.html
@@ -14,20 +14,18 @@
 
 <body>
 
-    <div class="banner">
-        <img src="assets/london.jpeg" alt="ACSICS'24 Workshop Banner" style="width: 100%">
+    <div id="top" class="banner">
+        <img src="assets/avignon2.webp" alt="SICSI'25 Workshop Banner" style="width: 100%">
         <div class="top-left">
-            <!--span class="title1">ACSICS</span><span class="title2"> Workshop</span> <span class="year">2024</span-->
-            <span class="title1">1<sup>st</sup> International Workshop on </span> <br>
-            <span class="title2">Autonomic Computing for</span> <br> 
+            <span class="title1">1<sup>st</sup> International Workshop on</span> <br>
             <span class="title2">Secure Industrial Control</span> <br>
             <span class="title2">Systems and Industrial-IoT</span> <br>
-            <span class="year">2024</span> <br>
+            <span class="year">2025</span> <br>
 
         </div>
         <div class="bottom-right">
-            co-located with <a target="_blank" href="https://www.ieee-csr.org/">IEEE CSR'24</a> <br>
-            September 2-4, London, UK (Hybrid)
+            co-located with <a target="_blank" href="https://cns2025.ieee-cns.org/">IEEE CNS'25</a> <br>
+            September 8-11, Avignon, France.
         </div>
     </div>
 
@@ -54,20 +52,24 @@
 
     <h2>Directions</h2>
     <p>
-        London is the capital city of England and the UK standing on the River Thames. London is a leading global city known for its arts, commerce, education, entertainment, fashion, finance, research and development, tourism, and transport. It is one of the world’s leading financial centres, a global cultural capital, and the world’s most-visited city. London’s 43 universities form the largest concentration of higher education institutes in Europe. London has a diverse range of peoples and cultures, and more than 300 spoken languages. The region had an official population of about 8.5M in 2013, the largest municipality in Europe, accounting for 12.5% of the UK population.
+        IEEE CNS 2025 is the 13th edition of this event and will take place at the Avignon Grand Hotel,
+        Avignon, France. Avignon is a vibrant city, seat of the popes and city of the art.    
     </p>
     <p>
-        London contains four world heritage sites: the Tower of London; Kew Gardens; the site comprising the Palace of Westminster, Westminster Abbey, and St Margaret’s Church; and the historic settlement of Greenwich. Other famous landmarks include Buckingham Palace, the London Eye, Piccadilly Circus, St Paul’s Cathedral, Tower Bridge, Trafalgar Square, and The Shard. London is home to numerous museums, galleries, libraries, sporting events and other cultural institutions, including the British Museum, National Gallery, Tate Modern, British Library and 40 West End theatres. The London Underground is the oldest underground railway network in the world.
+        Avignon, a city in southeastern France’s Provence region, is set on the Rhône River. 
+        From 1309 to 1377, it was the seat of the Catholic popes. 
+        It remained under papal rule until becoming part of France in 1791. 
+        This legacy can be seen in the massive Palais des Papes (Popes' Palace) in the city center, which is surrounded by medieval stone ramparts.
     </p>
 
-    <iframe class="directions" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23084.39582396181!2d-0.13731881418922295!3d51.50555193156033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C%20UK!5e0!3m2!1sen!2sus!4v1707114239694!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe class="directions" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d56559.392017014376!2d4.791972243912674!3d43.941610471113265!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12b5eb8739bc9d07%3A0xe6429b6efa1d7b36!2sAvignon%2C%20France!5e1!3m2!1sen!2sus!4v1744740373120!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     <!--img class="center" src="assets/kitten4.jpg" alt="This is just a kitten right now" id="kitten"-->
 
     <footer>
-        &copy; Workshop Organizers
-        &nbsp;|&nbsp; Sponsored by <a target="_blank" href="https://www.ieee-csr.org/">IEEE CSR 2024</a>
-        &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
+        &copy; <a href="../index.html#organizingCommittee">Workshop Organizers</a>
+        &nbsp;|&nbsp; Sponsored by <a target="_blank" href="https://cns2025.ieee-cns.org/">IEEE CNS 2025</a>
+        &nbsp;|&nbsp; Design by <a href="https://aliteke.github.io">A.T.</a>
     </footer>
 
 </body>
