--- a/flyer/index.html
+++ b/flyer/index.html
@@ -14,20 +14,18 @@
 
 <body>
 
-    <div class="banner">
-        <img src="assets/london.jpeg" alt="ACSICS'24 Workshop Banner" style="width: 100%">
+    <div id="top" class="banner">
+        <img src="assets/avignon2.webp" alt="SICSI'25 Workshop Banner" style="width: 100%">
         <div class="top-left">
-            <!--span class="title1">ACSICS</span><span class="title2"> Workshop</span> <span class="year">2024</span-->
-            <span class="title1">1<sup>st</sup> International Workshop on </span> <br>
-            <span class="title2">Autonomic Computing for</span> <br> 
+            <span class="title1">1<sup>st</sup> International Workshop on</span> <br>
             <span class="title2">Secure Industrial Control</span> <br>
             <span class="title2">Systems and Industrial-IoT</span> <br>
-            <span class="year">2024</span> <br>
+            <span class="year">2025</span> <br>
 
         </div>
         <div class="bottom-right">
-            co-located with <a target="_blank" href="https://www.ieee-csr.org/">IEEE CSR'24</a> <br>
-            September 2-4, London, UK (Hybrid)
+            co-located with <a target="_blank" href="https://cns2025.ieee-cns.org/">IEEE CNS'25</a> <br>
+            September 8-11, Avignon, France.
         </div>
     </div>
 
@@ -80,9 +78,9 @@
     <!--img src="assets/our-website-is-under-construction-but-the-web-under-construction-free.png" class="center" alt="under construction" style="width:67%;"-->
 
     <footer>
-        &copy; Workshop Organizers
-        &nbsp;|&nbsp; Sponsored by <a target="_blank" href="https://www.ieee-csr.org/">IEEE CSR 2024</a>
-        &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
+        &copy; <a href="../index.html#organizingCommittee">Workshop Organizers</a>
+        &nbsp;|&nbsp; Sponsored by <a target="_blank" href="https://cns2025.ieee-cns.org/">IEEE CNS 2025</a>
+        &nbsp;|&nbsp; Design by <a href="https://aliteke.github.io">A.T.</a>
     </footer>
 
 </body>
