--- a/registration/index.html
+++ b/registration/index.html
@@ -52,7 +52,7 @@
     <br>
 
     <p>
-       Registration will be done through the main conferece; <a target="_blank" href="https://www.ieee-csr.org/instructions/#1619620146782-9ac38ca5-5811">Cyber Security and Resilience (CSR'24)</a>
+       Registration will be done through the main conference IEEE CNS'25; <a target="_blank" href="https://cns2025.ieee-cns.org/registration">Conference on Communications and Network Security</a>
     </p>
     <!--
     <iframe class="registration" src="EMBED LINK FOR GOOGLE FORM HERE"></iframe>
