remote introduction from index.html

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </tr>
     </table>
 
-    <h2 id="intro">Introduction</h2-->
+    <!--h2 id="intro">Introduction</h2-->
     <h2 id="CFP">Call For Papers</h2>
     <p> 
         Industrial Control Systems (ICS) networks stand out as prime targets for global attackers due to their critical role as the essential part of any nation's infrastructure. 
