testing regitration/index.html

--- a/registration/index.html
+++ b/registration/index.html
@@ -59,7 +59,7 @@
     -->
 
     <footer>
-        &copy; <a href="../index.html#organizingCommittee">Workshop Organizers</a>
+        &copy; <a href="index.html#organizingCommittee">Workshop Organizers</a>
         &nbsp;|&nbsp; Sponsored by <a target="_blank" href="https://cns2025.ieee-cns.org/">IEEE CNS 2025</a>
         &nbsp;|&nbsp; Design by <a href="https://aliteke.github.io">A.T.</a>
     </footer>
