couple tiny edits.

--- a/directions/index.html
+++ b/directions/index.html
@@ -67,9 +67,9 @@
     <!--img class="center" src="assets/kitten4.jpg" alt="This is just a kitten right now" id="kitten"-->
 
     <footer>
-        &copy; <a href="../index.html#organizingCommittee">Workshop Organizers</a>
+        &copy; <a href="index.html#organizingCommittee">Workshop Organizers</a>
         &nbsp;|&nbsp; Sponsored by <a target="_blank" href="https://cns2025.ieee-cns.org/">IEEE CNS 2025</a>
-        &nbsp;|&nbsp; Design by <a href="https://aliteke.github.io">A.T.</a>
+        &nbsp;|&nbsp; Design by <a href="https://aliteke.github.io">a.t.</a>
     </footer>
 
 </body>
