--- a/flyer/index.html
+++ b/flyer/index.html
@@ -78,9 +78,9 @@
     <!--img src="assets/our-website-is-under-construction-but-the-web-under-construction-free.png" class="center" alt="under construction" style="width:67%;"-->
 
     <footer>
-        &copy; <a href="../index.html#organizingCommittee">Workshop Organizers</a>
+        &copy; <a href="index.html#organizingCommittee">Workshop Organizers</a>
         &nbsp;|&nbsp; Sponsored by <a target="_blank" href="https://cns2025.ieee-cns.org/">IEEE CNS 2025</a>
-        &nbsp;|&nbsp; Design by <a href="https://aliteke.github.io">A.T.</a>
+        &nbsp;|&nbsp; Design by <a href="https://aliteke.github.io">a.t.</a>
     </footer>
 
 </body>
