--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <p> 
         Industrial Control Systems (ICS) networks stand out as prime targets for global attackers due to their critical role as the essential part of any nation's infrastructure. 
         The autonomy and proactive nature of autonomic systems make them inherently preventive, acting as a barrier against potential threats. 
-        The workshop on "Autonomic Computing for Secure Industrial Control Systems and Industrial-IoT" invites contributions in the realm of enhancing security and resilience in industrial control systems and supervisory control and data acquisition (SCADA) systems through the lens of autonomic computing principles.
+        The workshop on "Secure Industrial Control Systems and Industrial-IoT (SICSI)" invites contributions in the realm of enhancing security and resilience in industrial control systems and supervisory control and data acquisition (SCADA) systems through the lens of autonomic computing principles.
     </p>
     <p>
         We welcome papers exploring innovative approaches inspired by autonomic computing for bolstering the security and resiliency of ICS/SCADA environments. Topics of interest include the application of artificial intelligence techniques and machine learning methods to fortify ICS/SCADA defenses against emerging threats, as well as the development of autonomous, self-managing security systems tailored to the unique challenges of industrial environments. We also encourage submissions that delve into the utilization of self-* properties and self-CHOP methodologies to ensure the security and resilience of interconnected systems, spanning from traditional ICS and SCADA to operational technology (OT) and industrial internet of things (IIoT) ecosystems. Additionally, we seek contributions addressing autonomic security management approaches specifically designed for ICS/SCADA infrastructures.
@@ -74,7 +74,7 @@
     <li>Application of self-CHOP and self-* properties for secure and resilient ICS/SCADA/OT/IoT/IIoT systems.</li>
     <li>Autonomous, self-managing security systems for ICS/SCADA.</li>
     <li>Autonomic security management for ICS/SCADA.</li>
-    <li>...</li>
+    <!--li>...</li-->
     </ul> 
     <p>The list above is by no means exhaustive, as the aim is to foster the debate around all aspects of autonomic security and resiliency methods for ICS.</p>
 
@@ -88,11 +88,11 @@
     <h4 id="Dates">Important Dates</h4>
     <p>Be mindful of the following dates:</p>
     <ul>
-    <li><strong>Workshop Paper Submission Deadline</s></strong>: <b>June 30</b></li>
-    <li><strong>Notification of Paper Acceptance</strong>: <b>July 15</b></li>
-    <li><strong>Camera-ready Papers Due</strong>: <b>August 5</b></li>
+    <li><u>Workshop Paper Submission Deadline</u>: <b>June 30</b></li>
+    <li><u>Notification of Paper Acceptance</u>: <b>July 15</b></li>
+    <li><u>Camera-ready Papers Due</u>: <b>August 5</b></li>
     <!--li><strong>Early Registration Deadline</strong>: <b>July 20</b></li-->
-    <li><strong>Workshop Date</strong>: <b>September 11</b></li>
+    <li><u>Workshop Date</u>: <b>September 11</b></li>
     </ul> 
     <p><em><u>Note</u></em>: all deadlines are AoE (Anywhere on Earth).</p>
 
@@ -162,7 +162,7 @@
     <footer>
         &copy; <a href="#organizingCommittee">Workshop Organizers</a>
         &nbsp;|&nbsp; Sponsored by <a target="_blank" href="https://cns2025.ieee-cns.org/">IEEE CNS 2025</a>
-        &nbsp;|&nbsp; Design by <a href="https://aliteke.github.io">A.T.</a>
+        &nbsp;|&nbsp; Design by <a href="https://aliteke.github.io">a.t.</a>
     </footer>
 
 </body>
