--- a/program/index.html
+++ b/program/index.html
@@ -333,9 +333,9 @@
     </table-->
 
     <footer>
-        &copy; <a href="../index.html#organizingCommittee">Workshop Organizers</a>
+        &copy; <a href="index.html#organizingCommittee">Workshop Organizers</a>
         &nbsp;|&nbsp; Sponsored by <a target="_blank" href="https://cns2025.ieee-cns.org/">IEEE CNS 2025</a>
-        &nbsp;|&nbsp; Design by <a href="https://aliteke.github.io">A.T.</a>
+        &nbsp;|&nbsp; Design by <a href="https://aliteke.github.io">a.t.</a>
     </footer>
 
 </body>
