--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     <h4>Guidelines</h4>
     <p>Papers should be formatted according to the <a target="_blank" href="https://cns2025.ieee-cns.org/workshop/submission-instructions">IEEE CSN'25 formatting guidelines</a>.</p>
-    <p><strong>Submit your paper:</strong> <a target="_blank" href="https://edas.info/newPaper.php?c=33531"> <img src="assets/edas_logo.jpg"  alt="EDAS Link to submit paper." style="float:right;width:42px;height:42px;"></a></p>
+    <p><strong>Submit your paper:</strong> <a target="_blank" href="https://edas.info/newPaper.php?c=33531"> <img src="assets/edas_logo.jpg"  alt="EDAS Link to submit paper." style="float:left;width:42px;height:42px;"></a></p>
 
     <h4 id="Dates">Important Dates</h4>
     <p>Be mindful of the following dates:</p>
