several edits on the images.

--- a/flyer/index.html
+++ b/flyer/index.html
@@ -15,17 +15,22 @@
 <body>
 
     <div id="top" class="banner">
-        <img src="assets/avignon2.webp" alt="SICSI'25 Workshop Banner" style="width: 100%">
+        <img src="assets/avignon_france_1300x820.webp" alt="SICSI'25 Workshop Banner" style="width: 100%; opacity: 0.8">
         <div class="top-left">
+            <a target="_blank" href="https://cns2025.ieee-cns.org/"> <img src="assets/cns25logo.png" alt="CNS'25" style="height: 40%"> </a>
             <span class="title1">1<sup>st</sup> International Workshop on</span> <br>
             <span class="title2">Secure Industrial Control</span> <br>
             <span class="title2">Systems and Industrial-IoT</span> <br>
             <span class="year">2025</span> <br>
-
+        </div>
+        <div class="bottom-left">
+            <!--a target="_blank" href="https://cns2025.ieee-cns.org/"> <img src="assets/cns25logo.png" alt="CNS'25" > </a-->
+            <a target="_blank" href="http://www.comsoc.org/"> <img src="assets/ieee-comsoc-registered-white.png" alt="IEEE Computer Society" style="width: 15%"> </a>
+            <a target="_blank" href="http://www.ieee.org/"> <img src="assets/ieee_logo_white.png" alt="IEEE" style="width: 15%"> </a>
         </div>
         <div class="bottom-right">
             co-located with <a target="_blank" href="https://cns2025.ieee-cns.org/">IEEE CNS'25</a> <br>
-            September 8-11, Avignon, France.
+            September 8-11 // Avignon, France
         </div>
     </div>
 
@@ -50,6 +55,10 @@
     </table>
 
     <br>
+    <h2>Conference Flyer</h2>
+    <p>
+        TBD...
+    </p>
 
     <!--p>
         I got lazy on this page and didn&rsquo;t mock up any template flyers for this template website.
@@ -58,20 +67,15 @@
         Click on the color or grayscale flyer below to download a pdf.
     </p-->
 
-    <table class="flyers">
+    <!--table class="flyers">
         <tr>
-            <!--td class="flyer">
-                <a href="assets/MathConnections-Flyer.pdf">
-                    <img src="assets/MathConnections-Flyer.png" alt="MathConnections Color Flyer" style="width:100%">
-                </a>
-            </td-->
             <td class="flyer">
                 <a href="assets/acsics_workshop_cfp.pdf">
                     <img src="assets/acsics_workshop_cfp.png" alt="ACSICS 2024 Flyer" style="width:50%">
                 </a>
             </td>
         </tr>
-    </table>
+    </table-->
     
     <br>
 
