--- a/index.html
+++ b/index.html
@@ -15,17 +15,22 @@
 <body>
 
     <div id="top" class="banner">
-        <img src="assets/avignon2.webp" alt="SICSI'25 Workshop Banner" style="width: 100%">
+        <img src="assets/avignon_france_1300x820.webp" alt="SICSI'25 Workshop Banner" style="width: 100%; opacity: 0.8">
         <div class="top-left">
+            <a target="_blank" href="https://cns2025.ieee-cns.org/"> <img src="assets/cns25logo.png" alt="CNS'25" style="height: 40%"> </a>
             <span class="title1">1<sup>st</sup> International Workshop on</span> <br>
             <span class="title2">Secure Industrial Control</span> <br>
             <span class="title2">Systems and Industrial-IoT</span> <br>
             <span class="year">2025</span> <br>
-
+        </div>
+        <div class="bottom-left">
+            <!--a target="_blank" href="https://cns2025.ieee-cns.org/"> <img src="assets/cns25logo.png" alt="CNS'25" > </a-->
+            <a target="_blank" href="http://www.comsoc.org/"> <img src="assets/ieee-comsoc-registered-white.png" alt="IEEE Computer Society" style="width: 15%"> </a>
+            <a target="_blank" href="http://www.ieee.org/"> <img src="assets/ieee_logo_white.png" alt="IEEE" style="width: 15%"> </a>
         </div>
         <div class="bottom-right">
             co-located with <a target="_blank" href="https://cns2025.ieee-cns.org/">IEEE CNS'25</a> <br>
-            September 8-11, Avignon, France.
+            September 8-11 // Avignon, France
         </div>
     </div>
 
@@ -103,22 +108,22 @@
         <tr>
             <td class="sponsor">
                 <a target="_blank" href="https://ep.jhu.edu/faculty/christopher-rouff/">
-                    <img src="assets/chris.jpg" alt="Dr. Christopher Rouff" style="width: 100%; height: 100%">
+                    <img src="assets/chris.jpg" alt="Dr. Christopher Rouff" style="width: 100%;">
                 </a>
             </td>
             <td class="sponsor">
                 <a target="_blank" href="https://engineering.jhu.edu/faculty/lanier-watkins/">
-                    <img src="assets/lanier.jpg" alt="Dr. Lanier Watkins" style="width: 100%; height: 100%">
+                    <img src="assets/lanier.jpg" alt="Dr. Lanier Watkins" style="width: 100%;">
                 </a>
             </td>
             <td class="sponsor">
                 <a target="_blank" href="https://www.linkedin.com/in/joe-maurio-p-e-6a9b68b">
-                    <img src="assets/joe.jpg" alt="Joe Maurio, PE" style="width: 100%; height: 100%">
+                    <img src="assets/joe.jpg" alt="Joe Maurio, PE" style="width: 100%;">
                 </a>
             </td>
             <td class="sponsor">
                 <a target="_blank" href="https://aliteke.github.io/">
-                    <img src="assets/ali.jpg" alt="Ali Tekeoglu, PhD" style="width: 100%; height: 100%">
+                    <img src="assets/ali.jpg" alt="Ali Tekeoglu, PhD" style="width: 100%;">
                 </a>
             </td>
         </tr>
@@ -157,7 +162,7 @@
         <li><strong><a href="https://kbekiroglu.github.io/" target="_blank">Dr. Korkut Bekiroglu</a></strong>, SharkNinja R&D, US</li>
         <li><strong><a href="https://inl.gov/" target="_blank">Dr. James Cervini</a></strong>, Idaho National Laboratory, US</li>
     </ul> 
-    <p><a href="#top">Go back to the top</a></p>
+    <p><a href="#top"><img src="assets/up.png" style="width: 5%"></a></p>
 
     <footer>
         &copy; <a href="#organizingCommittee">Workshop Organizers</a>
