--- a/program/index.html
+++ b/program/index.html
@@ -18,17 +18,22 @@
 <body>
 
     <div id="top" class="banner">
-        <img src="assets/avignon2.webp" alt="SICSI'25 Workshop Banner" style="width: 100%">
+        <img src="assets/avignon_france_1300x820.webp" alt="SICSI'25 Workshop Banner" style="width: 100%; opacity: 0.8">
         <div class="top-left">
+            <a target="_blank" href="https://cns2025.ieee-cns.org/"> <img src="assets/cns25logo.png" alt="CNS'25" style="height: 40%"> </a>
             <span class="title1">1<sup>st</sup> International Workshop on</span> <br>
             <span class="title2">Secure Industrial Control</span> <br>
             <span class="title2">Systems and Industrial-IoT</span> <br>
             <span class="year">2025</span> <br>
-
+        </div>
+        <div class="bottom-left">
+            <!--a target="_blank" href="https://cns2025.ieee-cns.org/"> <img src="assets/cns25logo.png" alt="CNS'25" > </a-->
+            <a target="_blank" href="http://www.comsoc.org/"> <img src="assets/ieee-comsoc-registered-white.png" alt="IEEE Computer Society" style="width: 15%"> </a>
+            <a target="_blank" href="http://www.ieee.org/"> <img src="assets/ieee_logo_white.png" alt="IEEE" style="width: 15%"> </a>
         </div>
         <div class="bottom-right">
             co-located with <a target="_blank" href="https://cns2025.ieee-cns.org/">IEEE CNS'25</a> <br>
-            September 8-11, Avignon, France.
+            September 8-11 // Avignon, France
         </div>
     </div>
 
@@ -54,7 +59,10 @@
 
     <h2>Conference Program</h2>
 
-    <img src="assets/our-website-is-under-construction-but-the-web-under-construction-free.png" class="center" alt="under construction" style="width:67%;">
+    <!--img src="assets/our-website-is-under-construction-but-the-web-under-construction-free.png" class="center" alt="under construction" style="width:67%;"-->
+    <p>
+        TBD...
+    </p>
 
     <!--table>
         <tr>
