--- a/index.html
+++ b/index.html
@@ -57,32 +57,39 @@
     <!--h2 id="intro">Introduction</h2-->
     <h2 id="CFP">Call For Papers</h2>
     <p> 
-        Industrial Control Systems (ICS) networks stand out as prime targets for global attackers due to their critical role as the essential part of any nation's infrastructure. 
-        The autonomy and proactive nature of autonomic systems make them inherently preventive, acting as a barrier against potential threats. 
-        The workshop on "Secure Industrial Control Systems and Industrial-IoT (SICSI)" invites contributions in the realm of enhancing security and resilience in industrial control systems and supervisory control and data acquisition (SCADA) systems through the lens of autonomic computing principles.
+        Critical Infrastructure (CI) stands out as prime targets for global attackers due to their critical role as the essential part of any nation's infrastructure. 
+        The workshop on "Secure Industrial Control Systems and Industrial-IoT (SICSI)" invites contributions in the realm of enhancing security and 
+        resilience in critical infrastructure, industrial control systems (ICS), supervisory control and data acquisition (SCADA) systems and operational technology (OT).
     </p>
     <p>
-        We welcome papers exploring innovative approaches inspired by autonomic computing for bolstering the security and resiliency of ICS/SCADA environments. Topics of interest include the application of artificial intelligence techniques and machine learning methods to fortify ICS/SCADA defenses against emerging threats, as well as the development of autonomous, self-managing security systems tailored to the unique challenges of industrial environments. We also encourage submissions that delve into the utilization of self-* properties and self-CHOP methodologies to ensure the security and resilience of interconnected systems, spanning from traditional ICS and SCADA to operational technology (OT) and industrial internet of things (IIoT) ecosystems. Additionally, we seek contributions addressing autonomic security management approaches specifically designed for ICS/SCADA infrastructures.
+        We welcome papers exploring innovative approaches for bolstering the security and resiliency of CI, ICS, SCADA and OT environments. 
+        Topics of interest include the application of artificial intelligence techniques and machine learning methods to fortify CI, ICS, SCADA and OT defenses against emerging threats, 
+        as well as the development of autonomous, self-managing security systems tailored to the unique challenges of industrial environments. 
+        We also encourage submissions that delve into the security and resilience of interconnected systems, 
+        spanning from traditional ICS and SCADA to operational technology and industrial internet of things (IIoT) ecosystems. 
+        Additionally, we seek contributions addressing autonomic security management approaches specifically designed for ICS/SCADA infrastructures.
     </p>
         
     <p>
-        Participants are encouraged to submit their work on novel approaches to autonomic security management tailored specifically for the unique challenges posed by ICS/SCADA infrastructures. Through this workshop, we aim to foster discussions and exchange of ideas among researchers and practitioners aiming to advance the state-of-the-art in securing critical industrial systems.
+        Participants are encouraged to submit their work on novel approaches to security tailored specifically for the unique challenges posed by CI, ICS, SCADA and OT infrastructures. 
+        Through this workshop, we aim to foster discussions and exchange of ideas among researchers and practitioners aiming to advance the state-of-the-art in securing critical industrial systems.
     </p>
     <!--p><a href="#top">Go back to the top</a></p-->
     
     <h3>Topics</h3>
-    <p>In this workshop, we invite the academic and industrial research community in ICS security to submit works related to the field and revolving around the following topic areas:</p>
+    <p>In this workshop, we invite the academic and industrial research community in CI, ICS, SCADA and OT security to submit works related to the field and revolving around the following topic areas:</p>
     <ul>
-    <li>Autonomic Computing (AC) inspired methods for ICS/SCADA security and resiliency.</li>
-    <li>Artificial Intelligence techniques for improving ICS/SCADA security and resiliency.</li>
-    <li>Machine Learning methods for detection and prevention of ICS/SCADA security threats.</li>
-    <li>Application of self-CHOP and self-* properties for secure and resilient ICS/SCADA/OT/IoT/IIoT systems.</li>
-    <li>Autonomous, self-managing security systems for ICS/SCADA.</li>
-    <li>Autonomic security management for ICS/SCADA.</li>
-    <!--li>...</li-->
+    <li>Artificial Intelligence techniques for improving CI/ICS/SCADA/OT security and resiliency.</li>
+    <li>Machine Learning (ML) / Deep Learning (DL) methods for detection and prevention of CI/ICS/SCADA/OT security threats.</li>
+    <li>Applications of Large Language Models (LLM) and Generative AI for securing CI/ICS/SCADA/OT and increasing resiliency.</li>
+    <li>Autonomous, self-managing security systems for CI/ICS/SCADA/OT.</li>
+    <li>Autonomic security management for CI/ICS/SCADA/OT.</li>
+    <li>Ransomware Attacks detection and prevention in ICS networks.</li>
+    <li>OT Supply Chain security.</li>
+    <li>IoT, IIoT Security.</li>
+    <li>Security of Cloud integration into OT.</li>
     </ul> 
-    <p>The list above is by no means exhaustive, as the aim is to foster the debate around all aspects of autonomic security and resiliency methods for ICS.</p>
-
+    <p>The list above is by no means exhaustive, as the aim is to foster the debate around all aspects of security (offensive/defensive), resiliency and privacy methods for critical infrastructure.</p>
 
     <h3 id="Submit">Submission</h3>
 
