--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <li><strong><a href="https://ep.jhu.edu/faculty/tamim-sookoor/" target="_blank">Dr. Tamim Sookoor</a></strong>, Johns Hopkins University Applied Physics Laboratory, US</li>
         <li><strong><a href="https://jhuapl.edu/" target="_blank">Dr. Daniel Davenport</a></strong>, Johns Hopkins University Applied Physics Laboratory, US</li>
         <li><strong><a href="https://llnl.gov/" target="_blank">Daniel Muller</a></strong>, Lawrence Livermore National Laboratory, US</li>
-        <li><strong><a href="https://www.peratonlabs.com/" target="_blank"> Victor Zhu</a></strong>, Johns Hopkins University Applied Physics Laboratory, US</li>
+        <li><strong><a href="https://jhuapl.edu/" target="_blank"> Victor Zhu</a></strong>, Johns Hopkins University Applied Physics Laboratory, US</li>
         <li><strong><a href="https://jhuapl.edu/" target="_blank">Dr. Sebastian Zanlongo</a></strong>, Johns Hopkins University Applied Physics Laboratory, US</li>
         <li><strong><a href="https://www.linkedin.com/in/iantchogan" target="_blank">Dr. Ian Hogan</a></strong>, Leidos Innovations Center, Cyber/AI Accelerator, US</li>
         <li><strong><a href="https://scholar.google.com/citations?user=RagNmoAAAAAJ&hl=en" target="_blank">Suhee Sanjana Mehjabin</a></strong>, University of Maryland Baltimore County, US</li>
