--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
     <h3>Program Committee</h3>
     <ul>
-        <li><strong><a href="https://www.ulster.ac.uk/staff/r-sterritt" target="_blank">Roy Sterritt</a></strong>, Ulster University, UK</li>
+        <li><strong><a href="https://www.ulster.ac.uk/staff/r-sterritt" target="_blank">Dr. Roy Sterritt</a></strong>, Ulster University, UK</li>
         <li><strong><a href="https://sie.engineering.arizona.edu/faculty-staff/faculty/pratik-satam" target="_blank">Dr. Pratik Satam</a></strong>, University of Arizona, US</li>
         <li><strong><a href="https://ep.jhu.edu/faculty/tamim-sookoor/" target="_blank">Dr. Tamim Sookoor</a></strong>, Johns Hopkins University Applied Physics Laboratory, US</li>
         <li><strong><a href="https://jhuapl.edu/" target="_blank">Dr. Daniel Davenport</a></strong>, Johns Hopkins University Applied Physics Laboratory, US</li>
