--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
             <td class="navigation">
                 <a title="Conference Flyer" href="flyer">Flyer</a>
             </td>
+            <td class="navigation">
+                <a title="Submission" href="https://edas.info/newPaper.php?c=33531">Submission</a>
+            </td>
         </tr>
     </table>
 
