--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <a title="Conference Flyer" href="flyer">Flyer</a>
             </td>
             <td class="navigation">
-                <a title="Submission" href="https://edas.info/newPaper.php?c=33531">Submission</a>
+                <a title="Submission" href=" https://edas.info/N33864">Submission</a>
             </td>
         </tr>
     </table>
