--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
     <h4 id="Dates">Important Dates</h4>
     <p>Be mindful of the following dates:</p>
     <ul>
-    <li><u>Workshop Paper Submission Deadline</u>: <b><s>June 30</s></b> <b>July 10</b></li>
-    <li><u>Notification of Paper Acceptance</u>: <b><s>July 15</s></b> <b>July 21</b></li>
+    <li><u>Workshop Paper Submission Deadline</u>: <b><s>June 30</s></b> <strong style="color:red;">July 10</strong></li>
+    <li><u>Notification of Paper Acceptance</u>: <b><s>July 15</s></b> <strong style="color:red;">July 21</strong></li>
     <li><u>Camera-ready Papers Due</u>: <b>August 5</b></li>
     <li><u>Workshop Date</u>: <b>September 11</b></li>
     </ul> 
