--- a/program/index.html
+++ b/program/index.html
@@ -60,7 +60,7 @@
     <h2>Conference Program</h2>
 
 
-    <--table>
+    <table>
         <tr>
             <td class="date" rowspan="2">
                 8:30am
